--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
     		<h2>Contact Us</h2>
 	    	<div class="textbox">
 		    	<p>Twitter:  <a href="https://twitter.com/cnjinfosec">@cnjinfosec</a></p>
-				<p>IRC:
-                <li>Server: chat.freenode.net
-                <li>Channel: #cnjinfosec</p>
+				<p>Slack: Request an invite to join the Slack channel at <a href="https://deadlink">Slack Request</a>
 		    </div>
     	</article>
 	</section>
