--- a/index.html
+++ b/index.html
@@ -32,16 +32,9 @@
 	<section id="second" class="story" data-speed="4" data-type="background">
 		<article>
 			<h2>About Us</h2>
-		    	<p>Central NJ Infosec is a loose group of security professionals in the Central NJ area. We have monthly meetings that do have rules.</p>
-		    <h3>Meetings</h3>
-                <p>We meet monthly on the last Wednesday of the month. Meetings include the following format:<br />
-                <li>Short "Turbo Talks" from anyone who would like to speak.
-                <li>Talks should be between 5-10 min in length.
-                <li>Topics can include anything relevent to hacking/infosec.
-                <li>Longer talks may be accepted as long as submitted prior to meetings.
-                <li><em>If this is your first time, come prepared to speak.</em></p>
+		    	<p>Central NJ Infosec is a loose group of security professionals in the Central NJ area. We have monthly meetings that do have rules. See Meetings for more information.</p>
             <h4>Participation</h4>
-		    	<p>Participation is mandatory for all involved with Central NJ Infosec. We all want to know what you are working on and the best way is for you to <em>speak</em> about it.</p>
+		    	<p>Participation is mandatory for all members of Central NJ Infosec. We all want to know what you are working on and the best way is for you to <em>speak</em> about it.</p>
             <h4>Presentation Ideas</h4>
                 <p>Often figuring out what to present on can be the most challenging. Below are some ideas to help you:<br />
                 <li>Present your own material/work
@@ -62,6 +55,13 @@
     		<h2>Meetings</h2>
 	    	<div class="textbox">
 		    	<p>Meetings take place the last Wednesday of each month from 7pm-9pm. Location is to be announced.</p>
+                    <p>A few rules for Central NJ Infosec:<br />
+                    <ol><li>The first rule of Central NJ Infosec is don't talk about Central NJ Infosec...
+                    <li>The second rule of Central NJ Infosec is forget the first rule. Share!
+                    <li>Keep it short! - Short "Turbo Talks" from anyone who would like to speak should be 5-10 min long. (Members are expected to share at least every other time they come.)
+                    <li>Longer talks may be accepted as long as submitted prior to meetings.
+                    <li>Topics can include anything relevent to hacking/infosec.
+                    <li><em>If this is your first time, come prepared to speak. (Even if it is a short introduction.)</em></ol></p>
 		    </div>
     	</article>
 	</section>
